New Features and Important Changes in GammaLib 00-09-02

Author(s) : Juergen Knoedlseder

1 February 2015


1. Introduction
---------------
This document briefly summarizes module by module the most important
changes made since the last release of GammaLib.


2. Public interface modifications
---------------------------------
classname() methods have now been added to the Python interface.


3. Configuration
-----------------
None


4. Application module
---------------------
None


5. Base module
--------------
None


6. FITS I/O Interface
---------------------
None


7. Linear algebra module
------------------------
None


8. Model module
---------------
The GModel::is_valid() method now allows specifying empty strings for the
instrument and id parameters that will skip the specific model validity
check. This allows to check for models of a given identifier whatever the
instrument, or for models for a given instrument, whatever the identifier.

Added unit tests for GModel base class methods.


9. Numerics module
------------------
None


10. Observation module
----------------------
None


11. Optimization module
-----------------------
None


12. Sky module
--------------
None


13. Support module
------------------
None


14. XML module
--------------
None


15. VO module
-------------
The XMLRPC path name as found in the .samp lockfile is now used to compose
the http POST message. This solves a problem when trying to connect to some
VO tool hubs.


16. Xspec module
----------------
None


17. Test module
---------------
None


18. Multi-wavelength interface
------------------------------
None


19. Fermi-LAT interface
----------------------
None


20. CTA interface
-----------------
Add a filename constructor to GCTAEventCube, and event cube constructors
to GCTAMeanPsf and GCTAExposure.

CTA event lists can now handle optional event phase information stored in a
column named PHASE. GCTAEventList takes care about bookeeping the existence