@@ -1,6 +1,6 @@
 GammaLib information
 ====================
-Version: 00-09-01 (7 January 2015)
+Version: 1.0.0 (2 February 2015)
 Author:  Juergen Knoedlseder (jurgen.knodlseder@irap.omp.eu)
 
 
