@@ -1,8 +1,8 @@
-New Features and Important Changes in GammaLib 00-09-02
+New Features and Important Changes in GammaLib 1.0.0
 
 Author(s) : Juergen Knoedlseder
 
-1 February 2015
+2 February 2015
 
 
 1. Introduction
@@ -14,6 +14,13 @@ changes made since the last release of GammaLib.
 2. Public interface modifications
 ---------------------------------
 classname() methods have now been added to the Python interface.
+
+The following classes have been renamed:
+* GCTAExposure               => GCTACubeExposure
+* GCTAMeanPsf                => GCTACubePsf
+* GCTASourceCube             => GCTACubeSource
+* GCTASourceCubeDiffuse      => GCTACubeSourceDiffuse
+* GCTASourceCubePointSource  => GCTACubeSourcePoint
 
 
 3. Configuration
@@ -111,7 +118,7 @@ None
 20. CTA interface
 -----------------
 Add a filename constructor to GCTAEventCube, and event cube constructors
-to GCTAMeanPsf and GCTAExposure.
+to GCTACubePsf and GCTACubeExposure.
 
 CTA event lists can now handle optional event phase information stored in a
 column named PHASE. GCTAEventList takes care about bookeeping the existence
